--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
  
 <head>
@@ -18,8 +18,7 @@
     <!-- import the Easel library. Downloaded from: http://easeljs.com/ -->
     <script src="lib/easel.js"></script>
     
-    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript"></script>
-
+	
     <script type='text/javascript'>
         var djConfig = {
                 isDebug: false,
@@ -27,6 +26,8 @@
                 baseUrl: './'
         };
     </script>
+	
+    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript"></script>
 	
 	<script src="/libs/uow/trace.js"></script>
     <script src="/libs/uow.js"></script>
