more menu edits, also resampled training instructions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
  
 <head>
@@ -37,16 +37,13 @@ f<!DOCTYPE html>
 	<script src="Coin.js"></script>
     <script src="SonicZoom.js"></script>
     <script src="index.js"></script>
-	
-
- 
 </head>
 
 <body onload="">
 	<div id="content">
 	    <div id="header">&nbsp;</div>
 	    <div id="canvasWrapper">
-	        <canvas id="worldCanvas" />
+	        <canvas id="worldCanvas" ></canvas>
 	    </div>
 	    <div id="footer">&nbsp;</div>
 	</div>
