added support for multiple objects, favicon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Sonic Zoom</title>
      
      <link href="index.css" rel="stylesheet" type="text/css">
-	 
+	 <link rel="shortcut icon" href="favicon.ico" />
     <!-- import the Easel library. Downloaded from: http://easeljs.com/ -->
     <script src="lib/easel.js"></script>
     
