reversed obstacle sounds, began adding obstacles into the game

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="Ship.js"></script>
 	<script src="Star.js"></script>
 	<script src="Coin.js"></script>
+	<script src="Obstacle.js"></script>
     <script src="SonicZoom.js"></script>
     <script src="index.js"></script>
 </head>
